--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/mattdecantedfavicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Daily Trial Quiz Micro-App</title>
+    <meta name="description" content="Matt Decanted – Refined wine knowledge, made fun." />
+    <title>Matt Decanted</title>
   </head>
   <body>
     <div id="root"></div>
