--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/mattdecantedfavicon.ico" />
+    <link rel="icon" type="image/png" href="/mattdecantedfavicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Matt Decanted – Refined wine knowledge, made fun." />
-    <title>Matt Decanted</title>
+    <title>Matt Decanted | Daily Wine Quiz</title>
   </head>
   <body>
     <div id="root"></div>
